--- a/Runner/Platforms/sl/sl50/packages.sl-50-x64.config
+++ b/Runner/Platforms/sl/sl50/packages.sl-50-x64.config
@@ -3,4 +3,5 @@
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
   <package id="ManyConsole" version="0.4.2.17" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40" />
 </packages>
