--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
 
 build_script:
   - "set PATH=%PATH%;C:\\Program Files (x86)\\Microsoft SDKs\\F#\\3.1\\Framework\\v4.0\\"
-  - fsi --exec build.fsx Test
+  - fsi --exec build.fsx
 
 artifacts:
   - path: deploy\build\*.zip
