--- a/Runner/Platforms/sl/sl50/sl-50-x64.csproj
+++ b/Runner/Platforms/sl/sl50/sl-50-x64.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\..\shared\VersionInfo.cs">
-      <Link>Properties\VersionInfo
+<Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="Commands\RunAloneCommand.cs" />
     <Compile Include="Commands\RunSatelliteCommand.cs" />
