--- a/Runner/Platforms/sl/sl50/sl-50-x86.csproj
+++ b/Runner/Platforms/sl/sl50/sl-50-x86.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\..\shared\VersionInfo.cs">
-      <Link>Properties\VersionInfo
+      <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="Util.cs" />
   </ItemGroup>
