--- a/Runner/Platforms/net/net45/net-45-x64-full.csproj
+++ b/Runner/Platforms/net/net45/net-45-x64-full.csproj
@@ -22,7 +22,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\x64\Release\</OutputPath>
+    <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;x64</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -80,9 +80,9 @@
       <Link>Commands\RunSatelliteCommand.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-<Compile Include="..\..\shared\VersionInfo.cs">
-  <Link>Properties\VersionInfo.cs</Link>
-</Compile>
+    <Compile Include="..\..\shared\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\PclUnit\PclUnit.csproj">
