--- a/PclUnit/PclUnit.csproj
+++ b/PclUnit/PclUnit.csproj
@@ -1,88 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{999019D5-60C5-4CE6-A070-28B197C44D2A}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PclUnit</RootNamespace>
-    <AssemblyName>PclUnit</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(OldPCL)' != '' ">
-    <TargetFrameworkProfile>Profile1</TargetFrameworkProfile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\build\lib\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>sn.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <None Include="sn.snk" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssertionException.cs" />
-    <Compile Include="AssertionHelper.cs" />
-    <Compile Include="ParameterSet.cs" />
-    <Compile Include="Run\Fixture.cs" />
-    <Compile Include="Run\Meta\AssemblyMeta.cs" />
-    <Compile Include="Run\Assert.cs" />
-    <Compile Include="Run\Meta\ResultsFile.cs" />
-    <Compile Include="Run\Meta\FixtureMeta.cs" />
-    <Compile Include="Run\Meta\IJsonSerialize.cs" />
-    <Compile Include="Run\Meta\IMeta.cs" />
-    <Compile Include="Run\Log.cs" />
-    <Compile Include="Run\Meta\Result.cs" />
-    <Compile Include="Run\Runner.cs" />
-    <Compile Include="Run\Test.cs" />
-    <Compile Include="Run\Meta\TestMeta.cs" />
-    <Compile Include="Run\TestCycleException.cs" />
-    <Compile Include="Run\TestFilter.cs" />
-    <Compile Include="Run\TestHarness.cs" />
-    <Compile Include="TestAttribute.cs" />
-    <Compile Include="Run\Attributes\TestAttributeBase.cs" />
-    <Compile Include="TestFixtureAttribute.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\VersionInfo.cs" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Compile Include="Run\Attributes\TestFixtureAttributeBase.cs" />
-    <Compile Include="TestFixtureDiscoveryAttribute.cs" />
-    <Compile Include="Run\Attributes\TestFixtureDiscoveryAttributeBase.cs" />
-    <Compile Include="Util\Utility.cs" />
+  <PropertyGroup>
+    <TargetFramework>netstandard1.3</TargetFramework>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
+    <PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
