--- a/Runner/pclunit-runner/pclunit-runner.csproj
+++ b/Runner/pclunit-runner/pclunit-runner.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-        <TargetFramework>net45</TargetFramework>
+        <TargetFramework>net451</TargetFramework>
 
     <OutputType>Exe</OutputType>
     <RootNamespace>pclunitrunner</RootNamespace>
@@ -10,20 +10,19 @@
   </PropertyGroup>
   <ItemGroup>
 
-    <PackageReference Include="ManyConsole" Version="0.4.2.17" />
+    <PackageReference Include="ManyConsole.CommandLineUtils" Version="1.0.2-alpha" />
     <PackageReference Include="Nancy" Version="0.22.2"/>
     <PackageReference Include="Nancy.Hosting.Self" Version="0.22.2"/>
     <PackageReference Include="Nancy.Serialization.JsonNet" Version="0.22.2"/>
-    <PackageReference Include="NDesk.Options" Version="0.2.1"/>
     <PackageReference Include="Newtonsoft.Json" Version="6.0.1"/>
     <PackageReference Include="YamlDotNet" Version="3.1.0"/>
   </ItemGroup>
   
-  <ItemGroup Condition="'$(TargetFramework)'=='netcore1.0'">
+  <ItemGroup Condition="'$(TargetFramework)'=='netcore1.1'">
     <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'=='net45'">
+  <ItemGroup Condition="'$(TargetFramework)'=='net451'">
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
